tests/core/faulty.sy
asdflökja;;;;
123
asd
// error: @1
// error: @3
